tests/conformance/positive/10-self-closing.sml
<!-- Self-closing tag (no scope) -->
<skill interface="health-check" />
