tests/conformance/negative/09-mismatched-close.sml
<!-- INVALID: mismatched closing -->
<!-- Expected: ParseError::MismatchedClose -->
<skill interface="outer">
  <skill interface="inner">
    Content.
  </skill>
